# agent-memory-cognitive

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  add_ch3_overview.py  add_llm_memory_issue.py  expand_literature.py  fix_latex.py  mkdocs.yml  overwrite_appendices.py  pyproject.toml  requirements-docs.txt
cogmem_api/: __init__.py  config.py  main.py  models.py  pg0.py  server.py
docker/: test-image.ps1  test-image.sh
docs/: CogMem-Idea.md  PLAN.md  REPORT.md  TEST_PLAN.md  hindsight_removal_playbook.md  migration_idea_coverage_matrix.md  pipeline_and_eval_overview.md  retain-testing-guide.md
notebooks/: Serve-LLM-Kaggle.ipynb
reports/: REPORT_S24.md  RESULT_30_04_26.md  audit_retain_20260419.md  audit_retain_20260419_v2.md  audit_retain_20260419_v3.md  audit_retain_20260420_v4.md  audit_retain_20260420_v5.md  audit_retain_20260420_v6.md  audit_retain_20260420_v7.md  audit_s25_20260428.md  hindsight_delete_only_report.md  hindsight_removal_readiness.md  manual_tutorial_full_gate.md  pre_tutorial_full_gate.md  retest_retain_latest.txt  run_retest_v7.ps1  s18_module_graph_snapshot.json  tutorial_convention_global_audit.md
scripts/: ablation_runner.py  diagnose_bank.py  distill_dataset.py  docker.ps1  docker.sh  eval_cogmem.py  eval_cogmem_batch.ps1  run_hindsight.ps1  schedule_run_hindsight.ps1  serve_ollama_openai.py  smoke-test-cogmem.ps1  smoke-test-cogmem.sh  test_hindsight.py
slides/: DATN_Proposal.pptx
tutorials/: INDEX.md  QUICKSTART.md  README.md  idea.md  learning-path.md  manual-code-reading-guide.md  module-map.md  plan.md  (+1 more)
(+401 files in other folders)
