[project]
name = "agent-memory-cognitive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "hindsight-client>=0.4.19",
    "httpx>=0.28.1",
    "json-repair>=0.59.4",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
embedded-db = [
    "pg0-embedded>=0.11.0",
]
local-ml = [
    "sentence-transformers>=3.0.0",
]

[project.scripts]
cogmem-api = "cogmem_api.main:main"
